# nao-bridge

./: .gitignore  README.md
.cursor/rules/: cursor-rules.mdc  python27-rules.mdc
.github/workflows/: docker-build-push.yml  pypi.yml  ruff.yml
clients/: README.md  example_client.py  example_usage.py  nao-bridge-api-insomnia.yaml  nao_bridge_client.py  setup.py
clients/mcphost/: README.md  config.json
clients/python/: README.md  bootstrap.py  example_usage.py  pyproject.toml  pyproject_toml
clients/python/nao_bridge_client/: __init__.py  client.py
clients/python/tests/: test_client.py  test_robot_state.py
server/: .python-version  Dockerfile  requirements.txt  start_api.sh
server/lib/fluentnao/: nao.py
server/lib/naoutil/: naoenv.py
server/nao_bridge/: __main__.py  animations.py  extensions.py  fluentnao_api.py  nao_bridge_api.py  server.py  swagger.py
server/nao_bridge/templates/: swagger.html
server/src/: animations.py  fluentnao_api.py  server.py  test_api.py
server/tests/: test_api.py
